# Sensei

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  install.ps1  install.py  install.sh  roadmap.html
backend/: Dockerfile  pyproject.toml
backend/benchmarks/: compression_benchmark.py
backend/sensei/: __init__.py  audit.py  config.py  main.py  purge.py  savings.py  watch.py
backend/sensei/agents/: __init__.py  crawler.py  extract.py  memory.py  runner.py  structured.py  toolbox.py  tools.py  webtools.py
backend/sensei/cli/: __init__.py
backend/sensei/compression/: __init__.py  cachealign.py  ccr.py  codecomp.py  learned.py  logcomp.py  router.py  smartcrusher.py  textcomp.py
backend/sensei/gui/: __init__.py
backend/sensei/models/: __init__.py  api.py  base.py  local.py  ollama.py  registry.py
backend/sensei/rag/: embeddings.py  store.py
backend/sensei/routers/: __init__.py  agent.py  audit.py  auth.py  chat.py  conversations.py  extract.py  gateway.py  maintenance.py  models.py  rag.py  settings.py  stats.py  watch.py  webhook.py
backend/sensei/security/: __init__.py  auth.py  crypto.py  filtering.py  oidc.py  rate_limit.py  rbac.py  redaction.py  sessions.py  users.py  vault.py
backend/tests/: test_agent.py  test_aggregate_compression.py  test_api.py  test_audit.py  test_compare.py  test_compression.py  test_compression_extra.py  test_config.py  test_crawler.py  test_extract.py  test_filtering.py  test_gateway.py  test_learned_compressor.py  test_oidc.py  test_purge.py  test_rag.py  test_rag_vector.py  test_rbac.py  test_redaction.py  test_research_agent.py  test_savings.py  test_security.py  test_settings.py  test_smartcrusher_extra.py  test_structured.py  test_users.py  test_vault.py  test_watch.py  test_webhook.py  test_webtools.py
rust/sensei_core/: .gitignore  Cargo.toml  README.md  pyproject.toml
(+68 files in other folders)
