[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensei"
version = "0.1.0"
description = "Self-hosted AI workspace with token compression, powered by GLM-5.2"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Sensei Issei"}]
keywords = ["ai", "llm", "glm", "self-hosted", "token-compression", "fastapi"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "tiktoken>=0.8.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "cryptography>=43.0.0",
    "h2>=4.1.0",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.3.0",
    "vllm>=0.6.0",
]
ml = [
    "torch>=2.5.0",
    "transformers>=4.46.0",
]
gui = [
    "PySide6>=6.8.0",
]
cli = [
    "rich>=13.9.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
all = ["sensei[local,ml,gui,cli,dev]"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["sensei"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
